Added a script for launching on Linux